# world-models

./: .gitignore  README.md  pyproject.toml
notebooks/: MsPacman-v4-RandomAgent AutoEncoder.ipynb  autoencoder.ipynb
scripts/: create_vast_instance.sh  ssh_vast_instance.sh
src/: scrape_gym_images.py  showcase_autoencoder.py  train_autoencoder.py
src/nets/: autoencoder.py
