[tool.poetry]
name = "world-models"
version = "0.0.0"
description = "A model-based reinforcement learning agent with language-describable latent states."
authors = ["Guy Paterson-Jones <guy.paterson.jones@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.8.0"
gym = {extras = ["atari", "accept-rom-license"], version = "^0.23.1"}
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
neovim = "^0.3.1"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
